# gridserver

./: CMakeLists.txt  main.cpp  mysqldatabase.cpp  mysqldatabase.h  server.cpp  server.h
ssh/: id_rsa  id_rsa.pub
