cmake_minimum_required (VERSION 2.8)
project (server)
set(CMAKE_BUILD_TOOL Release)
find_package(PkgConfig REQUIRED)
pkg_check_modules(MHD REQUIRED libmicrohttpd)
include_directories(${MHD_INCLUDE_DIRS})
aux_source_directory(. SRC_LIST)
add_executable(main ${SRC_LIST})
target_link_libraries(main ${MHD_LIBRARIES} -ljsoncpp -lmysqlcppconn) 